--- a/Wikipedia/wikipedia.html
+++ b/Wikipedia/wikipedia.html
@@ -6,6 +6,65 @@
     <title>Wikipedia</title>
 </head>
 <body>
-    <h1>Wikipedia</h1>
+    <table>
+        <tr>
+            <td><h3>From today's featured article</h3>
+                <img width="200" src="../Images/mountain.jpg" alt="">
+                <br>
+                Painting of the first day of the battle, with HMS Namur in the centre left
+                <br>
+                <br>
+                The naval Battle of Laggs took place between a British fleet commanded by Sir Edward Boscawen and a French fleet under Jean-François de La Clue- Sabran over 18-19 August 1759 during the Seven Years' War. The French Mediterranean Fleet successfully passed through the Strait of Gibraltar, but was sighted by a British ship. The British fleet in Gibraltar was undergoing a major refit and left port amidst great confusion, with many ships delayed and sailing in a second squadron. Aware that he was pursued, La Clue changed course, but half of his ships failed to follow him in the dark. The British caught the French south west of the Gulf of Cádiz, fierce fighting ensued, and one French ship was captured. The British pursued the remaining six French ships overnight and two managed to escape. The four survivors attempted to shelter in neutral Portuguese waters near Lagos, but Boscawen violated that neutrality, capturing two of the ships and destroying the other two. (Full article...)
+                <br><br>
+                Recently featured:
+                <br>
+                <ul>
+                    <li>Illatrated Daily New</li>
+                    <li>2019 World Snooker Championship</li>
+                    <li>Surrender of Japan</li>
+                </ul>
+                <ul>
+                    <li>Archive</li>
+                    <li>By email</li>
+                    <li>More featured articles</li>
+                </ul>
+                <h3>Did you know...</h3>
+                    <img width="200" src="../Images/hut.jpg" alt="">
+                    <br>
+                    Synagogue of Deal
+            </td>
+            <td>
+                <br>
+                <img width="150" src="../Images/photo-1504280390367-361c6d9f38f4.jpg" alt="">
+                <br>
+                Ronnie O'Sullivan
+                <ul>
+                    <li>Ronnie O'Sullivan (pictured) wins the World Snooker Championship, defeating Kyren Wilson in the final</li>
+                    <li>Ugandan Joshua Chretenti sets a new world record in the men's 5000 metres.</li>
+                    <li>Israel and the United Arab Emirates agree to establish diplomatic relations.</li>
+                    <li>Pro-democracy, protests intensify in Belarus
+                        after the contested reelection of incumbent President Alexander Lukashenko</li>
+                </ul>
+                Recent deaths:
+                <ul>
+                    <li>Jasraj</li>
+                    <li>Murtaja Baseer</li>
+                    <li>Robert Trump</li>
+                    <li>Linda Manz</li>
+                    <li>Julian Bream</li>
+                    <li>Luchita Hurtado</li>
+                </ul>
+                <ul>
+                    <li>Other recent events</li>
+                    <li>Nominate an article</li>
+                </ul>
+                <h3>On this day</h3>
+                August 18: Long Tan Day in Australia (1966)
+                <br><img width="200" src="../Images/labour.jpg" alt="">
+
+            </td>
+        </tr>
+    </table>
+
 </body>
 </html>
