--- a/Wikipedia/wikipedia.html
+++ b/Wikipedia/wikipedia.html
@@ -11,22 +11,22 @@
             <td><h3>From today's featured article</h3>
                 <img width="200" src="../Images/mountain.jpg" alt="">
                 <br>
-                Painting of the first day of the battle, with HMS Namur in the centre left
+                Painting of the first day of the battle, with <a href="#top">HMS Namur</a> in the centre left
                 <br>
                 <br>
-                The naval Battle of Laggs took place between a British fleet commanded by Sir Edward Boscawen and a French fleet under Jean-François de La Clue- Sabran over 18-19 August 1759 during the Seven Years' War. The French Mediterranean Fleet successfully passed through the Strait of Gibraltar, but was sighted by a British ship. The British fleet in Gibraltar was undergoing a major refit and left port amidst great confusion, with many ships delayed and sailing in a second squadron. Aware that he was pursued, La Clue changed course, but half of his ships failed to follow him in the dark. The British caught the French south west of the Gulf of Cádiz, fierce fighting ensued, and one French ship was captured. The British pursued the remaining six French ships overnight and two managed to escape. The four survivors attempted to shelter in neutral Portuguese waters near Lagos, but Boscawen violated that neutrality, capturing two of the ships and destroying the other two. (Full article...)
+                The naval <strong><a href="#top">Battle of Laggs</a></strong> took place between a British fleet commanded by <a href="#top">Sir Edward Boscawen </a> and a French fleet under Jean-François de La Clue- Sabran over 18-19 August 1759 during the <a href="#top">Seven Years' War.</a> The French Mediterranean Fleet successfully passed through the Strait of Gibraltar, but was sighted by a British ship. The British <a href="#top">fleet in Gibraltar </a> was undergoing a major refit and left port amidst great confusion, with many ships delayed and sailing in a second squadron. Aware that he was <a href="#top">pursued,</a> La Clue changed course, but half of his ships failed to follow him in the dark. The British caught the French south west of the <a href="#top">Gulf of Cádiz </a>, fierce fighting ensued, and one French ship was captured. The British pursued the remaining six French ships overnight and two managed to escape. The four survivors attempted to shelter in neutral Portuguese waters near Lagos, but Boscawen violated that neutrality, capturing two of the ships and destroying the other two. <strong><a href="#top">(Full article...) </a></strong>
                 <br><br>
                 Recently featured:
                 <br>
                 <ul>
-                    <li>Illatrated Daily New</li>
-                    <li>2019 World Snooker Championship</li>
-                    <li>Surrender of Japan</li>
+                    <li><a href="#top">Illatrated Daily New</a></li>
+                    <li><a href="#top">2019 World Snooker Championship</a></li>
+                    <li><a href="#top">Surrender of Japan</a></li>
                 </ul>
                 <ul>
-                    <li>Archive</li>
-                    <li>By email</li>
-                    <li>More featured articles</li>
+                    <li><strong><a href="#top">Archive</a></strong></li>
+                    <li><strong><a href="#top">By email </a></strong></li>
+                    <li><strong><a href="#top">More featured articles</a></strong></li>
                 </ul>
                 <h3>Did you know...</h3>
                     <img width="200" src="../Images/hut.jpg" alt="">
@@ -39,27 +39,27 @@
                 <br>
                 Ronnie O'Sullivan
                 <ul>
-                    <li>Ronnie O'Sullivan (pictured) wins the World Snooker Championship, defeating Kyren Wilson in the final</li>
-                    <li>Ugandan Joshua Chretenti sets a new world record in the men's 5000 metres.</li>
+                    <li><a href="#top">Ronnie O'Sullivan</a> (pictured) wins the <strong><a href="#top"></a>World Snooker Championship </strong>, defeating Kyren Wilson in the final</li>
+                    <li>Ugandan <strong><a href="#top">Joshua Chretenti </a></strong> sets a new world record in the men's 5000 metres.</li>
                     <li>Israel and the United Arab Emirates agree to establish diplomatic relations.</li>
-                    <li>Pro-democracy, protests intensify in Belarus
+                    <li><strong><a href="#top">Pro-democracy, </a></strong> protests intensify in Belarus
                         after the contested reelection of incumbent President Alexander Lukashenko</li>
                 </ul>
-                Recent deaths:
+               <strong><a href="#top"> Recent deaths: </a></strong>
                 <ul>
-                    <li>Jasraj</li>
-                    <li>Murtaja Baseer</li>
-                    <li>Robert Trump</li>
-                    <li>Linda Manz</li>
-                    <li>Julian Bream</li>
-                    <li>Luchita Hurtado</li>
+                    <li><a href="#top">Jasraj</a></li>
+                    <li><a href="#top">Murtaja Baseer</a></li>
+                    <li><a href="#top">Robert Trump</a></li>
+                    <li><a href="#top">Linda Manz</a></li>
+                    <li><a href="#top">Julian Bream</a></li>
+                    <li><a href="#top">Luchita Hurtado</a></li>
                 </ul>
                 <ul>
-                    <li>Other recent events</li>
-                    <li>Nominate an article</li>
+                    <li><strong><a href="#top">Other recent events </a></strong></li>
+                    <li><strong><a href="#top">Nominate an article </a></strong></li>
                 </ul>
                 <h3>On this day</h3>
-                August 18: Long Tan Day in Australia (1966)
+                <strong><a href="#top">August 18: Long Tan Day </a></strong> in Australia (1966)
                 <br><img width="200" src="../Images/labour.jpg" alt="">
 
             </td>
