--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <br><br><br>
     <center>
-        <img width="500" src="./Images/25_ByTheNumbers_Hero_1.gif" alt="Google Image">
+        <img width="300" src="./Images/Google_2015_logo.svg.png" alt="Google Image">
         <br><br>
-        <input placeholder="Search Wikipedia" type="search"> <button ><a href="./Wikipedia/worldwideweb.html">Search</a></button>
+        <input style="width: 300px;"  type="search"> 
+        <br><br>
+        <button ><a href="./Wikipedia/worldwideweb.html">Search</a></button> &nbsp; &nbsp; &nbsp; <button>I'm Feeling Lucky</button>
+        <p>Get qualified for in demand jobs with <a style="text-decoration: none;" href="">Google Cover Certificates</a></p>
+        <p>Google Offered in <a style="text-decoration: none;" href="">English Urdu Sindhi</a></p>
     </center>
 </body>
 </html>
