--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <br><br><br>
+    <br><br><br><br><br><br><br><br><br>
     <center>
-        <img width="300" src="./Images/Google_2015_logo.svg.png" alt="Google Image">
+        <img width="500" src="./Images/Google_2015_logo.svg.png" alt="Google Image">
         <br><br>
-        <input style="width: 300px;"  type="search"> 
+        <input style="width: 400px;"  type="search"> 
         <br><br>
         <button ><a href="./Wikipedia/worldwideweb.html">Search</a></button> &nbsp; &nbsp; &nbsp; <button>I'm Feeling Lucky</button>
-        <p>Get qualified for in demand jobs with <a style="text-decoration: none;" href="">Google Cover Certificates</a></p>
+        <small>
+            <p>Get qualified for in demand jobs with <a style="text-decoration: none;" href="">Google Cover Certificates</a></p>
         <p>Google Offered in <a style="text-decoration: none;" href="">English Urdu Sindhi</a></p>
+        </small>
     </center>
 </body>
 </html>
